...
    title: string;
    desc: string;
  }[] = [
    {
      id: 'waste',
      icon: 'trash-bin',
      title: 'Smart Waste',
      desc: 'Recycling classification',
    },
    {
      id: 'food',
      icon: 'restaurant',
      title: 'Food Carbon',
...
